--- a/teashop/src/app/home/home.page.html
+++ b/teashop/src/app/home/home.page.html
@@ -5,11 +5,13 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Raja LKR</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-row>
+    <ion-col size="12">
+      <ion-item>
+        <ion-label position="floating">Loan Tenure(in Months)</ion-label>
+        <ion-input class="ion-text-right"></ion-input>
+      </ion-item>
+    </ion-col>
+  </ion-row>
 </ion-content>
